add booking crash partial fix.